REGRESSSION(270435) [GStreamer] Many media source tests failing and timing out https://bugs.webkit.org/show_bug.cgi?id=219565

Reviewed by Philippe Normand.

Source/WebCore:

Fix the recursing calls due to the refactoring of `SourceBufferPrivate`.
(As Philippe Normand pointed out and Peng Liu added in the first
version of the patch).

Also fix the didReceiveInitializationSegment signature after r270612.

Covered by existing tests.

* platform/graphics/gstreamer/mse/AppendPipeline.cpp:
(WebCore::AppendPipeline::didReceiveInitializationSegment):
* platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.cpp:
(WebCore::SourceBufferPrivateGStreamer::didReceiveInitializationSegment):
(WebCore::SourceBufferPrivateGStreamer::didReceiveSample):
* platform/graphics/gstreamer/mse/SourceBufferPrivateGStreamer.h:

LayoutTests:

Revert the gardened expectations and garden remaining failures.

* platform/glib/TestExpectations:
* platform/gtk/TestExpectations:


Canonical link: https://commits.webkit.org/232428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270765 268f45cc-cd09-0410-ab3c-d52691b4dbfc